--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,13 @@
               "src/assets"
             ],
             "styles": [
+              {
+                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              
+              },
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/nova-light/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -72,6 +79,9 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
               "src/styles.css"
             ],
             "scripts": [],
